force-app/main/default/objects/Gimbal_Inventory_Settings__c/Gimbal_Inventory_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Gimbal Inventory Settings</label>
</CustomObject>