force-app/main/default/objects/Gimbal_Inventory_Settings__c/fields/Inventory_Adjustment_Expense_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Adjustment_Expense_GL_Account__c</fullName>
    <label>Inventory Adjustment Expense GL Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>