force-app/main/default/objects/Gimbal_Inventory_Settings__c/fields/Location_ID_Finished_Goods__c.field-meta.xml
<CustomField>
    <fullName>Location_ID_Finished_Goods__c</fullName>
    <inlineHelpText>This AcctSeedERP__Location__c is the destination for finished goods when building Finished Goods.</inlineHelpText>
    <label>Location ID - Finished Goods</label>
    <length>18</length>
    <type>Text</type>
</CustomField>