force-app/main/default/objects/Gimbal_Inventory_Settings__c/fields/Location_ID_Materials__c.field-meta.xml
<CustomField>
    <fullName>Location_ID_Materials__c</fullName>
    <inlineHelpText>This AcctSeedERP__Location__c is the source of non-oil materials when building Finished Goods.</inlineHelpText>
    <label>Location ID - Materials</label>
    <length>18</length>
    <type>Text</type>
</CustomField>