force-app/main/default/objects/Gimbal_Inventory_Settings__c/fields/Location_ID_Raw_Oil__c.field-meta.xml
<CustomField>
    <fullName>Location_ID_Raw_Oil__c</fullName>
    <inlineHelpText>This AcctSeedERP__Location__c is the source of raw oil when building Finished Goods.</inlineHelpText>
    <label>Location ID - Raw Oil</label>
    <length>18</length>
    <type>Text</type>
</CustomField>