force-app/main/default/objects/Gimbal_Inventory_Settings__c/fields/Transit_Location__c.field-meta.xml
<CustomField>
    <fullName>Transit_Location__c</fullName>
    <label>Transit Location</label>
    <length>18</length>
    <type>Text</type>
</CustomField>