force-app/main/default/objects/Gimbal_Inventory_Settings__c/fields/WIP_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>WIP_GL_Account__c</fullName>
    <label>WIP GL Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>